--- a/webapp/WEB-INF/views/my-page/my-course.html
+++ b/webapp/WEB-INF/views/my-page/my-course.html
@@ -61,7 +61,13 @@
 						<div class="listBox" style="cursor: pointer;" onclick="window.location='';">
 						  	<img class="courseImg" src="../../../assets/image/my-page/sample.jpg">
 						  	<div id="textBox">
-								<p id="courseName">신나는 코스</p>
+						  		<div class="courseTitle">
+									<p id="courseName">신나는 코스</p>
+									<div class="img-icons">
+										<img class="like-bookmark" src="../../../assets/image/main/heart.png">
+										<img class="like-bookmark" src="../../../assets/image/main/star.png">
+									</div>
+								</div>
 								<p id="courseInfo">홍길동</p>
 								<p id="courseInfo">조회수2 * 22.07.01</p>
 								<p id="courseInfo">후기글8 &nbsp;<img class="newpost" src="../../../assets/image/my-page/new.png"></p>
@@ -72,7 +78,13 @@
 						<div class="listBox" style="cursor: pointer;" onclick="window.location='';">
 						  	<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
 						  	<div id="textBox">
-								<p id="courseName">이건아닌데...</p>
+								<div class="courseTitle">
+									<p id="courseName">이건 아닌데...</p>
+									<div class="img-icons">
+										<img class="like-bookmark" src="../../../assets/image/main/heart-off.png">
+										<img class="like-bookmark" src="../../../assets/image/main/star-off.png">
+									</div>
+								</div>
 								<p id="courseInfo">고길동</p>
 								<p id="courseInfo">조회수2 * 22.06.30</p>
 								<p id="courseInfo">후기글0</p>
@@ -83,7 +95,13 @@
 						<div class="listBox" style="cursor: pointer;" onclick="window.location='';">
 						  	<img class="courseImg" src="../../../assets/image/my-page/sample3.jpg">
 						  	<div id="textBox">
-								<p id="courseName">깐따삐야 가는 길</p>
+								<div class="courseTitle">
+									<p id="courseName">깐따비야 가는 길</p>
+									<div class="img-icons">
+										<img class="like-bookmark" src="../../../assets/image/main/heart-off.png">
+										<img class="like-bookmark" src="../../../assets/image/main/star-off.png">
+									</div>
+								</div>
 								<p id="courseInfo">둘리</p>
 								<p id="courseInfo">조회수18 * 22.06.29</p>
 								<p id="courseInfo">후기글4 &nbsp;<img class="newpost" src="../../../assets/image/my-page/new.png"></p>
@@ -94,8 +112,14 @@
 						<div class="listBox" style="cursor: pointer;" onclick="window.location='';">
 						  	<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
 						  	<div id="textBox">
-								<p id="courseName">집에 가는 길</p>
-								<p id="courseInfo">둘리</p>
+								<div class="courseTitle">
+									<p id="courseName">집에 가는 길</p>
+									<div class="img-icons">
+										<img class="like-bookmark" src="../../../assets/image/main/heart-off.png">
+										<img class="like-bookmark" src="../../../assets/image/main/star-off.png">
+									</div>
+								</div>
+								<p id="courseInfo">아무개</p>
 								<p id="courseInfo">조회수11 * 22.06.21</p>
 								<p id="courseInfo">후기글0</p>
 						 	</div>
@@ -107,7 +131,13 @@
 						<div class="listBox" style="cursor: pointer;" onclick="window.location='';">
 						  	<img class="courseImg" src="../../../assets/image/my-page/sample.jpg">
 						  	<div id="textBox">
-								<p id="courseName">신나는 코스</p>
+								<div class="courseTitle">
+									<p id="courseName">신나는 코스</p>
+									<div class="img-icons">
+										<img class="like-bookmark" src="../../../assets/image/main/heart.png">
+										<img class="like-bookmark" src="../../../assets/image/main/star-off.png">
+									</div>
+								</div>
 								<p id="courseInfo">홍길동</p>
 								<p id="courseInfo">조회수2 * 22.07.01</p>
 								<p id="courseInfo">후기글5 &nbsp;<img class="newpost" src="../../../assets/image/my-page/new.png"></p>
@@ -118,7 +148,13 @@
 						<div class="listBox" style="cursor: pointer;" onclick="window.location='';">
 						  	<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
 						  	<div id="textBox">
-								<p id="courseName">이건아닌데...</p>
+								<div class="courseTitle">
+									<p id="courseName">학원 가는 길</p>
+									<div class="img-icons">
+										<img class="like-bookmark" src="../../../assets/image/main/heart-off.png">
+										<img class="like-bookmark" src="../../../assets/image/main/star.png">
+									</div>
+								</div>
 								<p id="courseInfo">고길동</p>
 								<p id="courseInfo">조회수2 * 22.06.30</p>
 								<p id="courseInfo">후기글0</p>
