--- a/webapp/WEB-INF/views/my-page/bookmark.html
+++ b/webapp/WEB-INF/views/my-page/bookmark.html
@@ -67,7 +67,13 @@
 						<div class="listBox" style="cursor: pointer;" onclick="window.location='';">
 						  	<img class="courseImg" src="../../../assets/image/my-page/sample.jpg">
 						  	<div id="textBox">
-								<p id="courseName">신나는 코스</p>
+								<div class="courseTitle">
+									<p id="courseName">신나는 코스</p>
+									<div class="img-icons">
+										<img class="like-bookmark" src="../../../assets/image/main/heart-off.png">
+										<img class="like-bookmark" src="../../../assets/image/main/star.png">
+									</div>
+								</div>
 								<p id="courseInfo">홍길동</p>
 								<p id="courseInfo">조회수2 * 22.07.01</p>
 								<p id="courseInfo">후기글8 &nbsp;<img class="newpost" src="../../../assets/image/my-page/new.png"></p>
@@ -78,7 +84,13 @@
 						<div class="listBox" style="cursor: pointer;" onclick="window.location='';">
 						  	<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
 						  	<div id="textBox">
-								<p id="courseName">이건아닌데...</p>
+								<div class="courseTitle">
+									<p id="courseName">오예</p>
+									<div class="img-icons">
+										<img class="like-bookmark" src="../../../assets/image/main/heart-off.png">
+										<img class="like-bookmark" src="../../../assets/image/main/star.png">
+									</div>
+								</div>
 								<p id="courseInfo">고길동</p>
 								<p id="courseInfo">조회수2 * 22.06.30</p>
 								<p id="courseInfo">후기글0</p>
@@ -89,7 +101,13 @@
 						<div class="listBox" style="cursor: pointer;" onclick="window.location='';">
 						  	<img class="courseImg" src="../../../assets/image/my-page/sample3.jpg">
 						  	<div id="textBox">
-								<p id="courseName">깐따삐야 가는 길</p>
+								<div class="courseTitle">
+									<p id="courseName">깐따삐야 가는 길</p>
+									<div class="img-icons">
+										<img class="like-bookmark" src="../../../assets/image/main/heart-off.png">
+										<img class="like-bookmark" src="../../../assets/image/main/star.png">
+									</div>
+								</div>
 								<p id="courseInfo">둘리</p>
 								<p id="courseInfo">조회수18 * 22.06.29</p>
 								<p id="courseInfo">후기글4 &nbsp;<img class="newpost" src="../../../assets/image/my-page/new.png"></p>
@@ -100,7 +118,13 @@
 						<div class="listBox" style="cursor: pointer;" onclick="window.location='';">
 						  	<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
 						  	<div id="textBox">
-								<p id="courseName">집에 가는 길</p>
+								<div class="courseTitle">
+									<p id="courseName">집에 가자</p>
+									<div class="img-icons">
+										<img class="like-bookmark" src="../../../assets/image/main/heart-off.png">
+										<img class="like-bookmark" src="../../../assets/image/main/star.png">
+									</div>
+								</div>
 								<p id="courseInfo">둘리</p>
 								<p id="courseInfo">조회수11 * 22.06.21</p>
 								<p id="courseInfo">후기글0</p>
@@ -113,7 +137,13 @@
 						<div class="listBox" style="cursor: pointer;" onclick="window.location='';">
 						  	<img class="courseImg" src="../../../assets/image/my-page/sample.jpg">
 						  	<div id="textBox">
-								<p id="courseName">신나는 코스</p>
+								<div class="courseTitle">
+									<p id="courseName">신나는 코스</p>
+									<div class="img-icons">
+										<img class="like-bookmark" src="../../../assets/image/main/heart-off.png">
+										<img class="like-bookmark" src="../../../assets/image/main/star.png">
+									</div>
+								</div>
 								<p id="courseInfo">홍길동</p>
 								<p id="courseInfo">조회수2 * 22.07.01</p>
 								<p id="courseInfo">후기글5 &nbsp;<img class="newpost" src="../../../assets/image/my-page/new.png"></p>
@@ -124,7 +154,13 @@
 						<div class="listBox" style="cursor: pointer;" onclick="window.location='';">
 						  	<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
 						  	<div id="textBox">
-								<p id="courseName">이건아닌데...</p>
+								<div class="courseTitle">
+									<p id="courseName">오호</p>
+									<div class="img-icons">
+										<img class="like-bookmark" src="../../../assets/image/main/heart-off.png">
+										<img class="like-bookmark" src="../../../assets/image/main/star.png">
+									</div>
+								</div>
 								<p id="courseInfo">고길동</p>
 								<p id="courseInfo">조회수2 * 22.06.30</p>
 								<p id="courseInfo">후기글0</p>
@@ -135,7 +171,13 @@
 						<div class="listBox" style="cursor: pointer;" onclick="window.location='';">
 						  	<img class="courseImg" src="../../../assets/image/my-page/sample3.jpg">
 						  	<div id="textBox">
-								<p id="courseName">깐따삐야 가는 길</p>
+								<div class="courseTitle">
+									<p id="courseName">깐따삐야 가는 길</p>
+									<div class="img-icons">
+										<img class="like-bookmark" src="../../../assets/image/main/heart-off.png">
+										<img class="like-bookmark" src="../../../assets/image/main/star.png">
+									</div>
+								</div>
 								<p id="courseInfo">둘리</p>
 								<p id="courseInfo">조회수18 * 22.06.29</p>
 								<p id="courseInfo">후기글0</p>
@@ -146,7 +188,13 @@
 						<div class="listBox" style="cursor: pointer;" onclick="window.location='';">
 						  	<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
 						  	<div id="textBox">
-								<p id="courseName">집에 가는 길</p>
+								<div class="courseTitle">
+									<p id="courseName">집에 가는 길</p>
+									<div class="img-icons">
+										<img class="like-bookmark" src="../../../assets/image/main/heart-off.png">
+										<img class="like-bookmark" src="../../../assets/image/main/star.png">
+									</div>
+								</div>
 								<p id="courseInfo">둘리</p>
 								<p id="courseInfo">조회수11 * 22.06.21</p>
 								<p id="courseInfo">후기글0</p>
@@ -158,7 +206,13 @@
 						<div class="listBox" style="cursor: pointer;" onclick="window.location='';">
 						  	<img class="courseImg" src="../../../assets/image/my-page/sample.jpg">
 						  	<div id="textBox">
-								<p id="courseName">신나는 코스</p>
+								<div class="courseTitle">
+									<p id="courseName">신나는 코스</p>
+									<div class="img-icons">
+										<img class="like-bookmark" src="../../../assets/image/main/heart-off.png">
+										<img class="like-bookmark" src="../../../assets/image/main/star.png">
+									</div>
+								</div>
 								<p id="courseInfo">홍길동</p>
 								<p id="courseInfo">조회수2 * 22.07.01</p>
 								<p id="courseInfo">후기글2 &nbsp;<img class="newpost" src="../../../assets/image/my-page/new.png"></p>
@@ -169,7 +223,13 @@
 						<div class="listBox" style="cursor: pointer;" onclick="window.location='';">
 						  	<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
 						  	<div id="textBox">
-								<p id="courseName">이건아닌데...</p>
+								<div class="courseTitle">
+									<p id="courseName">우이씨</p>
+									<div class="img-icons">
+										<img class="like-bookmark" src="../../../assets/image/main/heart-off.png">
+										<img class="like-bookmark" src="../../../assets/image/main/star.png">
+									</div>
+								</div>
 								<p id="courseInfo">고길동</p>
 								<p id="courseInfo">조회수2 * 22.06.30</p>
 								<p id="courseInfo">후기글3 &nbsp;<img class="newpost" src="../../../assets/image/my-page/new.png"></p>
@@ -180,7 +240,13 @@
 						<div class="listBox" style="cursor: pointer;" onclick="window.location='';">
 						  	<img class="courseImg" src="../../../assets/image/my-page/sample3.jpg">
 						  	<div id="textBox">
-								<p id="courseName">깐따삐야 가는 길</p>
+								<div class="courseTitle">
+									<p id="courseName">깐따삐야 가는 길</p>
+									<div class="img-icons">
+										<img class="like-bookmark" src="../../../assets/image/main/heart-off.png">
+										<img class="like-bookmark" src="../../../assets/image/main/star.png">
+									</div>
+								</div>
 								<p id="courseInfo">둘리</p>
 								<p id="courseInfo">조회수18 * 22.06.29</p>
 								<p id="courseInfo">후기글0</p>
@@ -191,7 +257,13 @@
 						<div class="listBox" style="cursor: pointer;" onclick="window.location='';">
 						  	<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
 						  	<div id="textBox">
-								<p id="courseName">집에 가는 길</p>
+								<div class="courseTitle">
+									<p id="courseName">밥먹으러 가는 길 </p>
+									<div class="img-icons">
+										<img class="like-bookmark" src="../../../assets/image/main/heart-off.png">
+										<img class="like-bookmark" src="../../../assets/image/main/star.png">
+									</div>
+								</div>
 								<p id="courseInfo">둘리</p>
 								<p id="courseInfo">조회수11 * 22.06.21</p>
 								<p id="courseInfo">후기글0</p>
@@ -204,7 +276,13 @@
 						<div class="listBox" style="cursor: pointer;" onclick="window.location='';">
 						  	<img class="courseImg" src="../../../assets/image/my-page/sample.jpg">
 						  	<div id="textBox">
-								<p id="courseName">신나는 코스</p>
+								<div class="courseTitle">
+									<p id="courseName">재밌는 길</p>
+									<div class="img-icons">
+										<img class="like-bookmark" src="../../../assets/image/main/heart-off.png">
+										<img class="like-bookmark" src="../../../assets/image/main/star.png">
+									</div>
+								</div>
 								<p id="courseInfo">홍길동</p>
 								<p id="courseInfo">조회수2 * 22.07.01</p>
 								<p id="courseInfo">후기글0</p>
@@ -215,7 +293,13 @@
 						<div class="listBox" style="cursor: pointer;" onclick="window.location='';">
 						  	<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
 						  	<div id="textBox">
-								<p id="courseName">이건아닌데...</p>
+								<div class="courseTitle">
+									<p id="courseName">나만 아는 길</p>
+									<div class="img-icons">
+										<img class="like-bookmark" src="../../../assets/image/main/heart-off.png">
+										<img class="like-bookmark" src="../../../assets/image/main/star.png">
+									</div>
+								</div>
 								<p id="courseInfo">고길동</p>
 								<p id="courseInfo">조회수2 * 22.06.30</p>
 								<p id="courseInfo">후기글0</p>
