--- a/webapp/WEB-INF/views/my-page/main.html
+++ b/webapp/WEB-INF/views/my-page/main.html
@@ -61,9 +61,9 @@
 						  	<img class="courseImg" src="../../../assets/image/my-page/sample.jpg">
 						  	<div id="textBox">
 								<div class="courseTitle">
-									<p id="courseName">신나는 코스</p>
+									<p id="courseName">신나는 코스 &nbsp;<img class="besticon" src="../../../assets/image/best/cgold.jpg"></p>
 									<div class="img-icons">
-										<img class="like-bookmark" src="../../../assets/image/main/heart-off.png">
+										<img class="like-bookmark" src="../../../assets/image/main/heart.png">
 										<img class="like-bookmark" src="../../../assets/image/main/star.png">
 									</div>
 								</div>
@@ -80,8 +80,8 @@
 								<div class="courseTitle">
 									<p id="courseName">우히히</p>
 									<div class="img-icons">
-										<img class="like-bookmark" src="../../../assets/image/main/heart-off.png">
-										<img class="like-bookmark" src="../../../assets/image/main/star.png">
+										<img class="like-bookmark" src="../../../assets/image/main/heart.png">
+										<img class="like-bookmark" src="../../../assets/image/main/star-off.png">
 									</div>
 								</div>
 								<p id="courseInfo">고길동</p>
@@ -95,7 +95,7 @@
 						  	<img class="courseImg" src="../../../assets/image/my-page/sample3.jpg">
 						  	<div id="textBox">
 								<div class="courseTitle">
-									<p id="courseName">빙수 먹으러 가는 길</p>
+									<p id="courseName">빙수 먹으러 가는 길 &nbsp;<img class="besticon" src="../../../assets/image/best/csilver.jpg"></p>
 									<div class="img-icons">
 										<img class="like-bookmark" src="../../../assets/image/main/heart.png">
 										<img class="like-bookmark" src="../../../assets/image/main/star.png">
@@ -112,7 +112,7 @@
 						  	<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
 						  	<div id="textBox">
 								<div class="courseTitle">
-									<p id="courseName">집에 가는 길</p>
+									<p id="courseName">집에 가는 길 &nbsp;<img class="besticon" src="../../../assets/image/best/cbronze.jpg"></p>
 									<div class="img-icons">
 										<img class="like-bookmark" src="../../../assets/image/main/heart-off.png">
 										<img class="like-bookmark" src="../../../assets/image/main/star.png">
