--- a/webapp/assets/css/my-page.css
+++ b/webapp/assets/css/my-page.css
@@ -26,10 +26,11 @@
 
 .resultList li #textBox {text-align:left; width:(100%-padding) ; height: 80px ; padding-left:5px; margin-top:5px; line-height:60px;}
 
-.resultList .courseTitle {width:250px; height:20px; margin-bottom:5px;padding:0px;}
-.resultList #courseName {position:absolute; font-weight:bold; font-size:16px; line-height: 20px;}
-.resultList .img-icons {float:right; width:50px; height:20px; margin:0px; padding:0px;}
-.resultList .img-icons .like-bookmark {vertical-align:top; margin:0px; padding:0px; width:20px; height:20px;}
+.resultList .courseTitle {width:255px; height:20px; margin-bottom:5px;padding:0px;}
+.resultList #courseName {position: absolute; font-weight:bold; font-size:16px; line-height: 20px;}
+.resultList .besticon {vertical-align:bottom; width:20px; height:20px;}
+.resultList .img-icons {float:right; width: 65px; height:24px; margin-right:3px; padding:0px; text-align:right;}
+.resultList .img-icons .like-bookmark {vertical-align:top; margin-left:3px; padding:0px; width:(100%-margin); height:24px;}
 
 .resultList li #textBox #courseInfo {font-size:13px; color: gray; line-height: 20px;}
 .resultList li #textBox .newpost {width:20px; height:20px; vertical-align:bottom;}
