--- a/webapp/WEB-INF/views/my-page/my-report.html
+++ b/webapp/WEB-INF/views/my-page/my-report.html
@@ -67,17 +67,21 @@
 				
 					
 					<div id="reportList">
-						<ul>
-							<li class="listTitle">
-								<p class="monthReport">이달의 기록</p>
-								<p class="todayReport">오늘의 기록</p>
-							</li>
+						<div class="listTitle">
+							<p class="monthReport">이달의 기록</p>
+							<p class="todayReport">오늘의 기록</p>
+						</div>
+						<ul class="reportBox">	
 							<li class="reportContent">
 								<div style="cursor: pointer;" onclick="window.location='';">
 									<img class="contentImg" src="../../../assets/image/my-page/sample.jpg">
 									<p class="contentTitle">내가 여기 왔다감ㅋ</p>
 									<p class="content">링거 맞고 뛰었다^^</p>
 									<p class="contentDate">2022.07.18 &nbsp; 10:03</p>
+									<div class="contentModify">
+										<button class="myreport-modify-btn">수정</button>
+										<button class="myreport-del-btn">삭제</button>
+									</div>
 								</div>
 							</li>
 							<li class="reportContent">
@@ -86,6 +90,10 @@
 									<p class="contentTitle">우앙우앙우앙</p>
 									<p class="content">우앙우앙우앙^^</p>
 									<p class="contentDate">2022.07.18 &nbsp; 10:03</p>
+									<div class="contentModify">
+										<button class="myreport-modify-btn">수정</button>
+										<button class="myreport-del-btn">삭제</button>
+									</div>
 								</div>
 							</li>
 							<li class="reportContent">
@@ -94,6 +102,10 @@
 									<p class="contentTitle">산책 재밌다</p>
 									<p class="content">산책 다녀왔는데 좋았네</p>
 									<p class="contentDate">2022.07.18 &nbsp; 10:03</p>
+									<div class="contentModify">
+										<button class="myreport-modify-btn">수정</button>
+										<button class="myreport-del-btn">삭제</button>
+									</div>
 								</div>
 							</li>
 							<li class="reportContent">
@@ -102,6 +114,10 @@
 									<p class="contentTitle">무더위</p>
 									<p class="content">요즘 날씨 미친거 같다</p>
 									<p class="contentDate">2022.07.18 &nbsp; 10:03</p>
+									<div class="contentModify">
+										<button class="myreport-modify-btn">수정</button>
+										<button class="myreport-del-btn">삭제</button>
+									</div>
 								</div>
 							</li>
 							<li class="reportContent">
@@ -110,6 +126,10 @@
 									<p class="contentTitle">살려줘ㅠㅠ</p>
 									<p class="content">html/css너무 귀찮다ㅠㅠ</p>
 									<p class="contentDate">2022.07.18 &nbsp; 10:03</p>
+									<div class="contentModify">
+										<button class="myreport-modify-btn">수정</button>
+										<button class="myreport-del-btn">삭제</button>
+									</div>
 								</div>
 							</li>
 						</ul>
