--- a/webapp/assets/css/my-page.css
+++ b/webapp/assets/css/my-page.css
@@ -96,11 +96,14 @@
 
 .myReport #reportList .reportContent {width:380px; height:120px; border:solid 0.5px rgb(101,101,101); border-top:none; margin:0px; padding:10px 0px 0px 10px;}
 .myReport #reportList .contentImg {width:100px; height:100px; border:solid 1px #000000; float:left; margin-right:20px; }
-.myReport #reportList .contentTitle {font-size:20px; font-weight:bold;line-height:40px;}
-.myReport #reportList .content {font-size:18px; line-height:25px; }
-.myReport #reportList .contentDate {font-size:14px; color:gray; line-height:30px;}
-
-
+.myReport #reportList .contentTitle {font-size:20px; font-weight:bold;line-height:30px;}
+.myReport #reportList .content {font-size:18px; line-height:24px; }
+.myReport #reportList .contentDate {font-size:14px; color:gray; line-height:24px;}
+.myReport #reportList .contentModify {font-size:14px; display:inline-block; }
+.myReport #reportList .contentModify .myreport-modify-btn {background-color:rgb(50, 108, 249); color:white;
+									margin-right:3px; border-style: none; border-color: none;}
+.myReport #reportList .contentModify .myreport-del-btn {background-color:red; color:white;
+									border-style: none; border-color: none; }
 
 
 
