--- a/webapp/WEB-INF/views/my-page/bookmark.html
+++ b/webapp/WEB-INF/views/my-page/bookmark.html
@@ -76,7 +76,7 @@
 								</div>
 								<p id="courseInfo">홍길동</p>
 								<p id="courseInfo">조회수2 * 22.07.01</p>
-								<p id="courseInfo">후기글8 &nbsp;<img class="newpost" src="../../../assets/image/my-page/new.png"></p>
+								<p id="courseInfo">후기글8 &nbsp;<img class="newpost" src="../../../assets/image/main/new.png"></p>
 						  	</div>
 						</div>
 					</li>
@@ -110,7 +110,7 @@
 								</div>
 								<p id="courseInfo">둘리</p>
 								<p id="courseInfo">조회수18 * 22.06.29</p>
-								<p id="courseInfo">후기글4 &nbsp;<img class="newpost" src="../../../assets/image/my-page/new.png"></p>
+								<p id="courseInfo">후기글4 &nbsp;<img class="newpost" src="../../../assets/image/main/new.png"></p>
 						  	</div>
 					  	</div>
 					</li>
@@ -146,7 +146,7 @@
 								</div>
 								<p id="courseInfo">홍길동</p>
 								<p id="courseInfo">조회수2 * 22.07.01</p>
-								<p id="courseInfo">후기글5 &nbsp;<img class="newpost" src="../../../assets/image/my-page/new.png"></p>
+								<p id="courseInfo">후기글5 &nbsp;<img class="newpost" src="../../../assets/image/main/new.png"></p>
 						  	</div>
 						</div>
 					</li>
@@ -215,7 +215,7 @@
 								</div>
 								<p id="courseInfo">홍길동</p>
 								<p id="courseInfo">조회수2 * 22.07.01</p>
-								<p id="courseInfo">후기글2 &nbsp;<img class="newpost" src="../../../assets/image/my-page/new.png"></p>
+								<p id="courseInfo">후기글2 &nbsp;<img class="newpost" src="../../../assets/image/main/new.png"></p>
 						  	</div>
 						</div>
 					</li>
@@ -232,7 +232,7 @@
 								</div>
 								<p id="courseInfo">고길동</p>
 								<p id="courseInfo">조회수2 * 22.06.30</p>
-								<p id="courseInfo">후기글3 &nbsp;<img class="newpost" src="../../../assets/image/my-page/new.png"></p>
+								<p id="courseInfo">후기글3 &nbsp;<img class="newpost" src="../../../assets/image/main/new.png"></p>
 						  	</div>
 						</div>
 					</li>
