--- a/webapp/WEB-INF/views/my-page/main.html
+++ b/webapp/WEB-INF/views/my-page/main.html
@@ -69,7 +69,7 @@
 								</div>
 								<p id="courseInfo">홍길동</p>
 								<p id="courseInfo">조회수2 * 22.07.01</p>
-								<p id="courseInfo">후기글8 &nbsp;<img class="newpost" src="../../../assets/image/my-page/new.png"></p>
+								<p id="courseInfo">후기글8 &nbsp;<img class="newpost" src="../../../assets/image/main/new.png"></p>
 						  	</div>
 						</div>
 					</li>
@@ -103,7 +103,7 @@
 								</div>
 								<p id="courseInfo">둘리</p>
 								<p id="courseInfo">조회수18 * 22.06.29</p>
-								<p id="courseInfo">후기글4 &nbsp;<img class="newpost" src="../../../assets/image/my-page/new.png"></p>
+								<p id="courseInfo">후기글4 &nbsp;<img class="newpost" src="../../../assets/image/main/new.png"></p>
 						  	</div>
 					  	</div>
 					</li>
@@ -139,7 +139,7 @@
 								</div>
 								<p id="courseInfo">홍길동</p>
 								<p id="courseInfo">조회수2 * 22.07.01</p>
-								<p id="courseInfo">후기글5 &nbsp;<img class="newpost" src="../../../assets/image/my-page/new.png"></p>
+								<p id="courseInfo">후기글5 &nbsp;<img class="newpost" src="../../../assets/image/main/new.png"></p>
 						  	</div>
 						</div>
 					</li>
@@ -208,7 +208,7 @@
 								</div>
 								<p id="courseInfo">홍길동</p>
 								<p id="courseInfo">조회수2 * 22.07.01</p>
-								<p id="courseInfo">후기글2 &nbsp;<img class="newpost" src="../../../assets/image/my-page/new.png"></p>
+								<p id="courseInfo">후기글2 &nbsp;<img class="newpost" src="../../../assets/image/main/new.png"></p>
 						  	</div>
 						</div>
 					</li>
@@ -225,7 +225,7 @@
 								</div>
 								<p id="courseInfo">고길동</p>
 								<p id="courseInfo">조회수2 * 22.06.30</p>
-								<p id="courseInfo">후기글3 &nbsp;<img class="newpost" src="../../../assets/image/my-page/new.png"></p>
+								<p id="courseInfo">후기글3 &nbsp;<img class="newpost" src="../../../assets/image/main/new.png"></p>
 						  	</div>
 						</div>
 					</li>
@@ -321,7 +321,7 @@
 								</div>
 								<p id="courseInfo">홍길동</p>
 								<p id="courseInfo">조회수2 * 22.07.01</p>
-								<p id="courseInfo">후기글8 &nbsp;<img class="newpost" src="../../../assets/image/my-page/new.png"></p>
+								<p id="courseInfo">후기글8 &nbsp;<img class="newpost" src="../../../assets/image/main/new.png"></p>
 						  	</div>
 						</div>
 					</li>
@@ -355,7 +355,7 @@
 								</div>
 								<p id="courseInfo">둘리</p>
 								<p id="courseInfo">조회수18 * 22.06.29</p>
-								<p id="courseInfo">후기글4 &nbsp;<img class="newpost" src="../../../assets/image/my-page/new.png"></p>
+								<p id="courseInfo">후기글4 &nbsp;<img class="newpost" src="../../../assets/image/main/new.png"></p>
 						  	</div>
 					  	</div>
 					</li>
