--- a/webapp/WEB-INF/views/my-page/my-course.html
+++ b/webapp/WEB-INF/views/my-page/my-course.html
@@ -70,7 +70,7 @@
 								</div>
 								<p id="courseInfo">홍길동</p>
 								<p id="courseInfo">조회수2 * 22.07.01</p>
-								<p id="courseInfo">후기글8 &nbsp;<img class="newpost" src="../../../assets/image/my-page/new.png"></p>
+								<p id="courseInfo">후기글8 &nbsp;<img class="newpost" src="../../../assets/image/main/new.png"></p>
 						  	</div>
 						</div>
 					</li>
@@ -104,7 +104,7 @@
 								</div>
 								<p id="courseInfo">둘리</p>
 								<p id="courseInfo">조회수18 * 22.06.29</p>
-								<p id="courseInfo">후기글4 &nbsp;<img class="newpost" src="../../../assets/image/my-page/new.png"></p>
+								<p id="courseInfo">후기글4 &nbsp;<img class="newpost" src="../../../assets/image/main/new.png"></p>
 						  	</div>
 					  	</div>
 					</li>
@@ -140,7 +140,7 @@
 								</div>
 								<p id="courseInfo">홍길동</p>
 								<p id="courseInfo">조회수2 * 22.07.01</p>
-								<p id="courseInfo">후기글5 &nbsp;<img class="newpost" src="../../../assets/image/my-page/new.png"></p>
+								<p id="courseInfo">후기글5 &nbsp;<img class="newpost" src="../../../assets/image/main/new.png"></p>
 						  	</div>
 						</div>
 					</li>
