링크 추가, 코스 제목 타이틀에 왕관 추가, 모달 하는중

--- a/webapp/WEB-INF/views/course/picture-add.html
+++ b/webapp/WEB-INF/views/course/picture-add.html
@@ -6,7 +6,7 @@
 
 <!-- css -->
 <link href="../../../assets/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css">
-<link rel="stylesheet" href="../../../assets/css/course.css">
+<link rel="stylesheet" href="../../../assets/css/course-write.css">
 
 <!-- 자바스크립트 -->
 <script type="text/javascript" src="../../../assets/js/jquery/jquery-1.12.4.js"></script>
