--- a/webapp/WEB-INF/views/course/write-course.html
+++ b/webapp/WEB-INF/views/course/write-course.html
@@ -5,7 +5,7 @@
 <title>코스 등록</title>
 <!-- css -->
 <link href="../../../assets/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css">
-<link rel="stylesheet" href="../../../assets/css/course.css">
+<link rel="stylesheet" href="../../../assets/css/course-write.css">
 
 <!-- 자바스크립트 -->
 <script type="text/javascript" src="../../../assets/js/jquery/jquery-1.12.4.js"></script>
@@ -191,8 +191,8 @@
 		
 		<!-- 하단 버튼 영역 -->
 		<div id="btn-wrap">
-			<button class="cancel">취소</button>
-			<button class="add">코스 등록</button>
+			<a href="" class="cancel">취소</a>
+			<a href="./view-course.html" class="add">코스 등록</a>
 		</div>
 		
 	</div>
