--- a/webapp/WEB-INF/views/course/write-record.html
+++ b/webapp/WEB-INF/views/course/write-record.html
@@ -5,7 +5,7 @@
 <title>기록 작성</title>
 <!-- css -->
 <link href="../../../assets/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css">
-<link rel="stylesheet" href="../../../assets/css/course.css">
+<link rel="stylesheet" href="../../../assets/css/course-write.css">
 
 <!-- 자바스크립트 -->
 <script type="text/javascript" src="../../../assets/js/jquery/jquery-1.12.4.js"></script>
@@ -71,14 +71,14 @@
 							
 							<div>
 								<p>종목</p>
-								<div class="box blue">산책</div>
+								<span>산책</span>
 								
 								<!-- 
-								<div class="box">조깅</div>
-								<div class="box">러닝</div>
-								<div class="box">마라톤</div>
-								<div class="box">자전거</div>
-								<div class="box">그림</div>
+								<span>조깅</span>
+								<span>러닝</span>
+								<span>마라톤</span>
+								<span>자전거</span>
+								<span>그림</span>
 								 -->
 							</div>
 							
@@ -100,9 +100,9 @@
 							<div>
 								<p>예상 난이도</p>
 								
-								<div class="box blue">쉬움</div>
-								<div class="box">보통</div>
-								<div class="box">어려움</div>
+								<span>쉬움</span>
+								<!-- <span>보통</span>
+								<span>어려움</span> -->
 							</div>
 						</div>
 						
@@ -251,8 +251,8 @@
 		
 		
 		<div id="btn-wrap">
-			<button class="cancel">취소</button>
-			<button class="add">기록 등록</button>
+			<a href="./view-record.html" class="cancel">취소</a>
+			<a href="../my-page/my-report.html" class="add">기록 등록</a>
 		</div>
 		
 	</div>
