--- a/webapp/assets/css/course-view.css
+++ b/webapp/assets/css/course-view.css
@@ -37,16 +37,14 @@ input[type=radio] {display:none;}
 	display: inline-block;
 	width: 180px;
 	line-height: 60px;
+	color: rgb(34, 34, 34);
 	font-size: 16px;
 	text-align: center;
 	background-color: rgb(255,255,255);
 	border: 1px solid rgb(174, 174, 174);
 }
-.tabbtn>a {
-	color: rgb(34, 34, 34);
-}
 /* 검은색 버튼 */
-.selected, .selected>a {
+.selected, .selected:visited {
 	background-color: rgb(34, 34, 34);
 	color: rgb(255, 255, 255);
 }
@@ -86,7 +84,11 @@ input[type=radio] {display:none;}
 	letter-spacing: -0.5px;
 	text-align:center;
 	margin-bottom: 5px;
-	
+}
+.course-info-content h2 img {
+	width: 24px;
+	height: 24px;
+	margin-right: 10px;
 }
 /* 이름, 글정보 */
 .course-info-content .article-info {
