--- a/webapp/WEB-INF/views/board/board.html
+++ b/webapp/WEB-INF/views/board/board.html
@@ -34,10 +34,12 @@
 		<!-- 필터링 옵션 항목 -->
 		<div id="top_aside">
 			<select id="option">
+				<option value="default"></option>
 				<option value="question">질문</option>
 				<option value="commute">소통</option>
 				<option value="post">후기</option>
 				<option value="together">함께</option>
+				<option value="map">코스</option>
 			</select>
 			
 			<!-- 검색창과 버튼 -->
