--- a/webapp/WEB-INF/views/board/read.html
+++ b/webapp/WEB-INF/views/board/read.html
@@ -54,8 +54,6 @@
 						</tr>
 						<tr>
 							<td>
-								<img class="image" src="../../../assets/image/board/window.jpg">
-								<img class="image" src="../../../assets/image/board/flower.jpg">
 								<!-- 
 								<div class="course-container" onclick="window.location='../course/c_viewform.html';">
 									<div class="course-icon"><img src="../../../assets/image/map/map-icon.jpg"></div>
@@ -100,7 +98,12 @@
 										</tbody>
 									</table>
 								</div>
-								
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<img class="image" src="../../../assets/image/board/window.jpg">
+								<img class="image" src="../../../assets/image/board/flower.jpg">
 							</td>
 						</tr>
 					</tbody>
@@ -138,6 +141,8 @@
 						<button type="submit" id="delete_xs">삭제</button>
 					</div><!-- writer_btn -->
 					<p id="REcomment_bottom">&nbsp &nbsp ㄴ쭈쭈:나는 두개 샀어!</p>
+					
+					<input type="text" id="replybox"><button type="submit" id="reply_btn"><span class="glyphicon glyphicon-open"></span></button>
 				</div><!-- commentbox -->
 			</div><!-- 댓글 -->
 		
