--- a/webapp/WEB-INF/views/together/together.html
+++ b/webapp/WEB-INF/views/together/together.html
@@ -65,6 +65,11 @@
 								<span class="glyphicon glyphicon-bookmark"></span> 태그
 							</a>
 						</li>
+						<li id="joined_btn">
+							<a href="">
+								<span class="glyphicon glyphicon-ok"></span> 참여
+							</a>
+						</li>
 					</ul>
 				</div><!-- rightside -->
 			</div><!-- together-nav -->
