--- a/webapp/assets/css/together.css
+++ b/webapp/assets/css/together.css
@@ -67,7 +67,7 @@ h1 {
 	font-size : 13pt;
 }
 #rightside ul > li {float: left;}
-#tag_btn {margin-left: 7px;}
+#tag_btn, #joined_btn {margin-left: 7px;}
 
 /******************** 함께하기 표 ********************/
 
