2022-08-01 best 좋아요,즐찾 추가

--- a/webapp/WEB-INF/views/best/bestplus.html
+++ b/webapp/WEB-INF/views/best/bestplus.html
@@ -87,7 +87,10 @@
 							<div class="comment-text1">와타시노 나마에와 우투더여응투더우!</div> <br> 
 							<input type="button" id="cbutton" name="button" value="후기 : 3개" >
 							
-							
+							<div class="imgbutton">
+								<img src="../../../assets/image/main/heart.png"><span>좋아요 : 103개</span>
+								<img src="../../../assets/image/main/star.png"><span>즐겨찾기 : 10개</span>
+							</div>
 							
 					</div>
 				</div>
