--- a/webapp/WEB-INF/views/my-page/my-report.html
+++ b/webapp/WEB-INF/views/my-page/my-report.html
@@ -75,13 +75,15 @@
 							<li class="reportContent">
 								<div style="cursor: pointer;" onclick="window.location='';">
 									<img class="contentImg" src="../../../assets/image/my-page/sample.jpg">
-									<p class="contentTitle">내가 여기 왔다감ㅋ</p>
+									<div class="contentTitle">
+										<p>내가 여기 왔다감ㅋ</p>
+										<div class="modify-del-icons">
+											<span class="glyphicon glyphicon-pencil"></span>
+											<span class="glyphicon glyphicon-trash"></span>
+										</div>
+									</div>
 									<p class="content">링거 맞고 뛰었다^^</p>
 									<p class="contentDate">2022.07.18 &nbsp; 10:03</p>
-									<div class="contentModify">
-										<button class="myreport-modify-btn">수정</button>
-										<button class="myreport-del-btn">삭제</button>
-									</div>
 								</div>
 							</li>
 							<li class="reportContent">
