--- a/webapp/WEB-INF/views/my-page/my-report.html
+++ b/webapp/WEB-INF/views/my-page/my-report.html
@@ -75,15 +75,13 @@
 							<li class="reportContent">
 								<div style="cursor: pointer;" onclick="window.location='';">
 									<img class="contentImg" src="../../../assets/image/my-page/sample.jpg">
-									<div class="contentTitle">
-										<p>내가 여기 왔다감ㅋ</p>
-										<div class="modify-del-icons">
-											<span class="glyphicon glyphicon-pencil"></span>
-											<span class="glyphicon glyphicon-trash"></span>
-										</div>
-									</div>
+									<p class="contentTitle">내가 여기 왔다감ㅋ</p>
 									<p class="content">링거 맞고 뛰었다^^</p>
 									<p class="contentDate">2022.07.18 &nbsp; 10:03</p>
+									<div class="modify-del-icons">
+										<span class="glyphicon glyphicon-pencil"></span>&nbsp;
+										<span class="glyphicon glyphicon-trash"></span>
+									</div>
 								</div>
 							</li>
 							<li class="reportContent">
@@ -92,9 +90,9 @@
 									<p class="contentTitle">우앙우앙우앙</p>
 									<p class="content">우앙우앙우앙^^</p>
 									<p class="contentDate">2022.07.18 &nbsp; 10:03</p>
-									<div class="contentModify">
-										<button class="myreport-modify-btn">수정</button>
-										<button class="myreport-del-btn">삭제</button>
+									<div class="modify-del-icons">
+										<span class="glyphicon glyphicon-pencil"></span>&nbsp;
+										<span class="glyphicon glyphicon-trash"></span>
 									</div>
 								</div>
 							</li>
@@ -104,9 +102,9 @@
 									<p class="contentTitle">산책 재밌다</p>
 									<p class="content">산책 다녀왔는데 좋았네</p>
 									<p class="contentDate">2022.07.18 &nbsp; 10:03</p>
-									<div class="contentModify">
-										<button class="myreport-modify-btn">수정</button>
-										<button class="myreport-del-btn">삭제</button>
+									<div class="modify-del-icons">
+										<span class="glyphicon glyphicon-pencil"></span>&nbsp;
+										<span class="glyphicon glyphicon-trash"></span>
 									</div>
 								</div>
 							</li>
@@ -116,9 +114,9 @@
 									<p class="contentTitle">무더위</p>
 									<p class="content">요즘 날씨 미친거 같다</p>
 									<p class="contentDate">2022.07.18 &nbsp; 10:03</p>
-									<div class="contentModify">
-										<button class="myreport-modify-btn">수정</button>
-										<button class="myreport-del-btn">삭제</button>
+									<div class="modify-del-icons">
+										<span class="glyphicon glyphicon-pencil"></span>&nbsp;
+										<span class="glyphicon glyphicon-trash"></span>
 									</div>
 								</div>
 							</li>
@@ -128,9 +126,9 @@
 									<p class="contentTitle">살려줘ㅠㅠ</p>
 									<p class="content">html/css너무 귀찮다ㅠㅠ</p>
 									<p class="contentDate">2022.07.18 &nbsp; 10:03</p>
-									<div class="contentModify">
-										<button class="myreport-modify-btn">수정</button>
-										<button class="myreport-del-btn">삭제</button>
+									<div class="modify-del-icons">
+										<span class="glyphicon glyphicon-pencil"></span>&nbsp;
+										<span class="glyphicon glyphicon-trash"></span>
 									</div>
 								</div>
 							</li>
