--- a/webapp/assets/css/my-page.css
+++ b/webapp/assets/css/my-page.css
@@ -96,11 +96,11 @@
 
 .myReport #reportList .reportContent {width:380px; height:120px; border:solid 0.5px rgb(101,101,101); border-top:none; margin:0px; padding:10px 0px 0px 10px;}
 .myReport #reportList .contentImg {width:100px; height:100px; border:solid 1px #000000; float:left; margin-right:20px; }
-.myReport #reportList .contentTitle {position:absoulte; font-size:16px; width:300px; font-weight:bold;line-height:28px; display:inline-block;}
-.myReport #reportList .modify-del-icons {float:right;}
+.myReport #reportList .contentTitle {font-size:16px; width:360px; font-weight:bold;line-height:28px; }
+.myReport #reportList .modify-del-icons {margin:10px 20px 0px 0px;}
 .myReport #reportList .content {font-size:14px; line-height:20px; }
 .myReport #reportList .contentDate {font-size:12px; color:gray; line-height:20px;}
-.myReport #reportList .contentModify {font-size:12px; display:inline-block; margin-top:5px;}
+/* .myReport #reportList .contentModify {font-size:12px; display:inline-block; margin-top:5px;} */
 /* .myReport #reportList .contentModify .myreport-modify-btn {background-color:rgb(50, 108, 249); color:white;
 									margin-right:3px; border-style: none; border-color: none;}
 .myReport #reportList .contentModify .myreport-del-btn {background-color:red; color:white;
